--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,13 @@
       }(window.location))
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7F0QNWQ3BX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J6VV4DGD3N"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-7F0QNWQ3BX');
+      gtag('config', 'G-J6VV4DGD3N');
     </script>
   </head>
   <body>
